SD Permlink ID0013584

--- a/merli_cer/web/WEB-INF/missatges.properties
+++ b/merli_cer/web/WEB-INF/missatges.properties
@@ -17,10 +17,10 @@ administracio.accessos.cercador=Cercador
 administracio.accessos.numero_cerques=N&uacute;mero de cerques
 administracio.accessos.errorData=El format de les dates ha de ser dd/mm/aaaa
 
-cerca.cercaCompletaTest.attribution=Attribution
-cerca.cercaCompletaTest.noncomercial=Non commercial
-cerca.cercaCompletaTest.noderivateworks=No Derivate Works
-cerca.cercaCompletaTest.sharealike=Share alike	
+#cerca.cercaCompletaTest.attribution=Attribution
+#cerca.cercaCompletaTest.noncomercial=Non commercial
+#cerca.cercaCompletaTest.noderivateworks=No Derivate Works
+#cerca.cercaCompletaTest.sharealike=Share alike
 cerca.cercaCompletaTest.xtec=XTEC
 
 cerca.cercaCompletaTest.attribution.value=Attribution
@@ -97,9 +97,9 @@ administracio.editarNoticia.editar=Edita
 administracio.editarNoticia.afegir=Afegeix una not&iacute;cia nova
 administracio.editarNoticia.publicar=Mostra
 administracio.editarNoticia.despublicar=Oculta
-administracio.editarNoticia.editar=Edita
+#administracio.editarNoticia.editar=Edita
 administracio.editarNoticia.eliminar=Elimina
-administracio.editarNoticia.noticies=Not&iacute;cies
+#administracio.editarNoticia.noticies=Not&iacute;cies
 administracio.editarNoticia.no_publica=oculta
 administracio.editarNoticia.publica=mostra
 administracio.editarNoticia.edita=edita
@@ -108,11 +108,11 @@ administracio.editarNoticia.elimina=elimina
 administracio.editarNoticia.eliminar_confirmacio=S\'eliminar&agrave; la not&iacute;cia del sistema
 
 #administracio/noticies.jsp
-administracio.noticies.noticies=Not&iacute;cies
+#administracio.noticies.noticies=Not&iacute;cies
 administracio.noticies.novaNoticia=Not&iacute;cia nova
 administracio.noticies.titol=T&iacute;tol
 administracio.noticies.cos=Cos
-administracio.noticies.editar=Edita
+#administracio.noticies.editar=Edita
 administracio.noticies.afegir=Afegeix
 administracio.noticies.publicar=Mostra
 administracio.noticies.despublicar=Oculta
@@ -356,6 +356,7 @@ cerca.resultatsCerca.defecte=Defecte
 cerca.resultatsCerca.alfabeticament=Alfab&egrave;ticament
 cerca.resultatsCerca.paginaResultats=P&agrave;gina de resultats
 cerca.resultatsCerca.subscriureCerca=Subscriu aquesta cerca
+cerca.resultatsCerca.subscriurePermalink=Copiar l'enllaç permanent als resultats d'aquesta recerca
 cerca.resultatsCerca.noResultats=No s'ha trobat cap resultat per a aquesta cerca
 cerca.resultatsCerca.catalegMerli=Cat&agrave;leg Merl&iacute;
 cerca.resultatsCerca.versioImprimir=Versi&oacute; per imprimir
