--- a/merli_cer/src/log4j.properties
+++ b/merli_cer/src/log4j.properties
@@ -19,7 +19,7 @@ log4j.appender.R.MaxFileSize=10240KB
 log4j.appender.R.MaxBackupIndex=10
 
 #Appender C
-log4j.appender.C=org.apache.log4j.ConsoleAppender
+log4j.appender.C=org.apache.log4j.RollingFileAppender
 log4j.appender.C.layout=org.apache.log4j.PatternLayout
 log4j.appender.C.layout.ConversionPattern=[%p]%d{DATE} %l - %m%n
 log4j.appender.C.Threshold=ERROR
