--- a/crawler/src/main/webapp/WEB-INF/web.xml
+++ b/crawler/src/main/webapp/WEB-INF/web.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <web-app
-  version="3.0"
+  version="2.5"
   xmlns="http://java.sun.com/xml/ns/javaee"
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
@@ -27,6 +27,14 @@
   <listener>
     <listener-class>
       org.quartz.ee.servlet.QuartzInitializerListener
+    </listener-class>
+  </listener>
+
+  <!-- Crawler context listener ========================================= -->
+
+  <listener>
+    <listener-class>
+      cat.xtec.merli.crawler.CrawlerListener
     </listener-class>
   </listener>
 
