--- a/package/pom.xml
+++ b/package/pom.xml
@@ -62,6 +62,7 @@
             </goals>
             <configuration>
               <classifier>${env}</classifier>
+              <generateApplicationXml>true</generateApplicationXml>
             </configuration>
           </execution>
         </executions>
