--- a/package/pom.xml
+++ b/package/pom.xml
@@ -31,14 +31,6 @@
   <version>${revision}</version>
   <packaging>ear</packaging>
 
-  <!-- Project properties =============================================== -->
-
-  <properties>
-    <revision>1.0.0-SNAPSHOT</revision>
-    <maven.compiler.source>1.7</maven.compiler.source>
-    <maven.compiler.target>1.7</maven.compiler.target>
-  </properties>
-
   <!-- Parent module ==================================================== -->
 
   <parent>
@@ -51,7 +43,6 @@
 
   <build>
     <plugins>
-
       <plugin>
         <artifactId>maven-ear-plugin</artifactId>
         <version>2.9</version>
@@ -68,66 +59,8 @@
           </execution>
         </executions>
       </plugin>
-
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-enforcer-plugin</artifactId>
-        <version>3.0.0-M2</version>
-        <executions>
-          <execution>
-            <id>enforce-versions</id>
-            <goals>
-              <goal>enforce</goal>
-            </goals>
-            <configuration>
-              <rules>
-                <enforceBytecodeVersion>
-                  <maxJdkVersion>1.7</maxJdkVersion>
-                  <excludes>
-                    <exclude>org.mindrot:jbcrypt</exclude>
-                  </excludes>
-                </enforceBytecodeVersion>
-              </rules>
-            </configuration>
-          </execution>
-        </executions>
-        <dependencies>
-          <dependency>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>extra-enforcer-rules</artifactId>
-            <version>1.0-beta-9</version>
-          </dependency>
-        </dependencies>
-      </plugin>
-
     </plugins>
   </build>
-
-  <!-- Build profiles =================================================== -->
-
-  <profiles>
-    <profile>
-      <id>dev</id>
-      <properties>
-        <env>dev</env>
-      </properties>
-      <activation>
-        <activeByDefault>true</activeByDefault>
-      </activation>
-    </profile>
-    <profile>
-      <id>int</id>
-      <properties>
-        <env>int</env>
-      </properties>
-    </profile>
-    <profile>
-      <id>pro</id>
-      <properties>
-        <env>pro</env>
-      </properties>
-    </profile>
-  </profiles>
 
   <!-- Module dependencies ============================================== -->
 
@@ -138,6 +71,15 @@
     <dependency>
       <groupId>cat.xtec.merli.crawler</groupId>
       <artifactId>merli-crawler</artifactId>
+      <version>${revision}</version>
+      <type>war</type>
+    </dependency>
+
+    <!-- Curriculum editor module -->
+
+    <dependency>
+      <groupId>cat.xtec.merli.manager</groupId>
+      <artifactId>merli-manager</artifactId>
       <version>${revision}</version>
       <type>war</type>
     </dependency>
