Reorganize domain classes as a GWT module
* Adds a GWT module descriptor for the domain.
* Moves XML adapters to a separate package.
* Appends a maven target to package the source code.

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -39,6 +39,32 @@
     <version>${revision}</version>
   </parent>
 
+  <!-- Project properties =============================================== -->
+
+  <properties>
+    <version.gwt>2.8.2</version.gwt>
+  </properties>
+
+  <!-- Build configuration ============================================== -->
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-source-plugin</artifactId>
+        <version>3.0.1</version>
+        <executions>
+          <execution>
+            <id>attach-sources</id>
+            <goals>
+              <goal>jar-no-fork</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
+
   <!-- Module dependencies ============================================== -->
 
   <dependencies>
