Adds a build plugins module for Maven
* New Maven module to contain build plugins.
* Appends maven-webprotege-plugin as a Git submodule.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "manager/core"]
 	path = manager/src/core
 	url = git@github.com:protegeproject/webprotege.git
+[submodule "maven/webprotege"]
+	path = utilities/webprotege
+	url = git@github.com:protegeproject/webprotege-maven-plugin.git
