--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,7 @@
     <module>crawler</module>
     <module>manager</module>
     <module>package</module>
+    <module>utilities</module>
   </modules>
 
 </project>
