--- a/manager/pom.xml
+++ b/manager/pom.xml
@@ -26,7 +26,6 @@
 
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>cat.xtec.merli.manager</groupId>
   <artifactId>merli-manager</artifactId>
   <version>${revision}</version>
   <packaging>war</packaging>
@@ -36,7 +35,7 @@
   <parent>
     <groupId>cat.xtec.merli</groupId>
     <artifactId>merli</artifactId>
-    <version>${revision}</version>
+    <version>1.0.0</version>
   </parent>
 
   <!-- Project properties =============================================== -->
@@ -55,9 +54,6 @@
       <id>edu.protege.stanford</id>
       <name>Protege Project Maven Repo</name>
       <url>https://github.com/protegeproject/mvn-repo/raw/master/releases</url>
-      <snapshots>
-        <updatePolicy>daily</updatePolicy>
-      </snapshots>
     </repository>
   </repositories>
 
@@ -207,15 +203,13 @@
     <!-- Core library -->
 
     <dependency>
-      <groupId>cat.xtec.merli.core</groupId>
+      <groupId>cat.xtec.merli</groupId>
       <artifactId>merli-core</artifactId>
-      <version>${revision}</version>
     </dependency>
 
     <dependency>
-      <groupId>cat.xtec.merli.core</groupId>
+      <groupId>cat.xtec.merli</groupId>
       <artifactId>merli-core</artifactId>
-      <version>${revision}</version>
       <classifier>sources</classifier>
     </dependency>
 
@@ -565,7 +559,7 @@
     <dependency>
       <groupId>edu.stanford.protege</groupId>
       <artifactId>graphtree</artifactId>
-      <version>1.0.0-SNAPSHOT</version>
+      <version>1.1.0</version>
     </dependency>
 
   </dependencies>
