--- a/utilities/pom.xml
+++ b/utilities/pom.xml
@@ -26,9 +26,8 @@
 
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>cat.xtec.merli</groupId>
   <artifactId>merli-maven-plugins</artifactId>
-  <version>${revision}</version>
+  <version>1.0.0</version>
   <packaging>pom</packaging>
 
   <!-- Parent module ==================================================== -->
@@ -36,7 +35,7 @@
   <parent>
     <groupId>cat.xtec.merli</groupId>
     <artifactId>merli</artifactId>
-    <version>${revision}</version>
+    <version>1.0.0</version>
   </parent>
 
   <!-- Project modules ================================================== -->
