Initial implementation of the binder module
This module provides utilities to bind ontologies to bean objects
and vice versa. Similar to what JAXB provides for XML.

--- a/pom.xml
+++ b/pom.xml
@@ -119,9 +119,10 @@
   <modules>
     <module>core</module>
     <module>crawler</module>
-    <module>parser</module>
     <module>manager</module>
     <module>package</module>
+    <module>parser</module>
+    <module>mapper</module>
     <module>utilities</module>
   </modules>
 
