--- a/manager/pom.xml
+++ b/manager/pom.xml
@@ -205,12 +205,20 @@
     <dependency>
       <groupId>cat.xtec.merli</groupId>
       <artifactId>merli-core</artifactId>
+      <version>${revision}</version>
     </dependency>
 
     <dependency>
       <groupId>cat.xtec.merli</groupId>
       <artifactId>merli-core</artifactId>
+      <version>${revision}</version>
       <classifier>sources</classifier>
+    </dependency>
+
+    <dependency>
+      <groupId>cat.xtec.merli</groupId>
+      <artifactId>merli-mapper</artifactId>
+      <version>${revision}</version>
     </dependency>
 
     <!-- Google Web Toolkit (GWT) -->
