Refactors the manager RPC service servlets
* Abstracts the servlets into a common base.
* Implements a service for each domain type.

--- a/manager/pom.xml
+++ b/manager/pom.xml
@@ -165,12 +165,14 @@
         <executions>
           <execution>
             <goals>
+              <goal>generateAsync</goal>
               <goal>compile</goal>
             </goals>
           </execution>
         </executions>
         <configuration>
           <runTarget>WebProtege.jsp</runTarget>
+          <servicePattern>cat/xtec/**/*Service.java</servicePattern>
           <extraJvmArgs>-Xms1G -Xmx4G</extraJvmArgs>
           <localWorkers>1</localWorkers>
           <modules>
